<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home" />
    <item
        android:id="@+id/navigation_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/navigation_add_photo"
        android:title="@string/add_post"
        android:icon="@drawable/ic_add_circle"/>
    <item
        android:id="@+id/navigation_likes"
        android:title="@string/likes"
        android:icon="@drawable/ic_heart"/>
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_people"/>
</menu>